Floating Keyboard stops propagation of drag handle events

If a touch/mouse event occurs and it is interpreted as a floating
keyboard drag event, do not propagate the event to the javascript
keyboard extension as there is no reason to.

This was causing the drag event to cause the gesture swiping to be
active while dragging the keyboard around, particularly if the keyboard
was bounded to the bottom of the screen and the user's finger is able
to move around on the keys while still moving the keyboard (see
attached bug for repro/video).

Bug: 826078
Change-Id: I40c859f979d41a5d61e88ff0bd41808dcf3940c2
Reviewed-on: https://chromium-review.googlesource.com/997195
Reviewed-by: Yuichiro Hanada <yhanada@chromium.org>
Commit-Queue: Blake O'Hare <blakeo@chromium.org>
Cr-Commit-Position: refs/heads/master@{#548374}
Former-commit-id: 6b3d6841cf0897f2824c799098d6c24eaa0ac679