ui/keyboard/container_floating_behavior.cc
@@ -179,7 +179,7 @@ bool ContainerFloatingBehavior::IsDragHandle(
   return draggable_area_.Contains(offset.x(), offset.y());
 }
 
-void ContainerFloatingBehavior::HandlePointerEvent(
+bool ContainerFloatingBehavior::HandlePointerEvent(
     const ui::LocatedEvent& event,
     const gfx::Rect& display_bounds) {
   // Cannot call UI-backed operations without a KeyboardController
@@ -192,7 +192,9 @@ void ContainerFloatingBehavior::HandlePointerEvent(
 
   // Don't handle events if this runs in a partially initialized state.
   if (keyboard_bounds.height() <= 0)
-    return;
+    return false;
+
+  bool handled = false;
 
   const ui::EventType type = event.type();
   switch (type) {
@@ -204,11 +206,13 @@ void ContainerFloatingBehavior::HandlePointerEvent(
                  !((const ui::MouseEvent*)&event)->IsOnlyLeftMouseButton()) {
         // Mouse events are limited to just the left mouse button.
         drag_descriptor_ = nullptr;
+        handled = true;
       } else if (!drag_descriptor_) {
         // If there is no active drag descriptor, start a new one.
         bool drag_started_by_touch = (type == ui::ET_TOUCH_PRESSED);
         drag_descriptor_.reset(new DragDescriptor(
             keyboard_bounds.origin(), kb_offset, drag_started_by_touch));
+        handled = true;
       }
       break;
 
@@ -239,6 +243,7 @@ void ContainerFloatingBehavior::HandlePointerEvent(
             gfx::Rect(new_keyboard_location, keyboard_bounds.size());
         controller_->MoveKeyboard(new_bounds);
         SavePosition(container->bounds(), display_bounds.size());
+        handled = true;
       }
       break;
 
@@ -246,6 +251,7 @@ void ContainerFloatingBehavior::HandlePointerEvent(
       drag_descriptor_ = nullptr;
       break;
   }
+  return handled;
 }
 
 void ContainerFloatingBehavior::SetCanonicalBounds(
